# rov_nmpc

./: CMakeLists.txt  README.md  code_gen_drone  code_gen_rov  getting_started  package.xml
include/: mpc_acado.h  mpc_acado_node.h
model/codegen/: nmpc_common.h  nmpc_integrator.c  nmpc_qpoases_interface.cpp  nmpc_qpoases_interface.hpp  nmpc_solver.c
src/: mpc_acado.cpp  mpc_acado_node.cpp  rov_mpc_node.cpp
src/code_generation/: code_gen_drone.cpp  code_gen_rov.cpp
